--- a/src/styles.css
+++ b/src/styles.css
@@ -13,22 +13,31 @@ body{
 .banner {
         padding: 0 100px;
         position: relative;
-        object-fit: cover;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 }
 .banner .super {
         background-color: rgba(0, 0, 0, .3);
         width: 100%;
+        height: 223px;
         border-radius: 15px;
-        z-index: 2;
         position: relative;
+        object-fit: cover;
 }
-.banner img {
+.banner .super img {
         width: 100%;
         border-radius: 15px;
         z-index: 0;
-        position: relative;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        filter: brightness(0.65);
 }
 
 .banner p {
-        position: absolute;
+        color: white;
+        font-size: 48px;
+        position:absolute;
 }
