--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@ footer {
         justify-content: center;
         align-items: center;
         padding: 66px 0 30px;
+        width: 100%;
 }
 
 p {
