--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,7 @@ main .card {
         border-radius: 10px;
         overflow: hidden;
         position: relative;
-        padding: 20px;
+        padding: 10px 20px;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -116,8 +116,19 @@ main .card {
         object-fit: cover;
         height: 100%;
 }
+
+.card .shadow {
+        box-shadow: rgba(0,0,0,0.5) 0px -100px 36px -28px inset;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 340px;
+
+}
+
 .card .text {
         position: absolute;
         z-index: 10;
-        background-color: rgba(15, 15, 15, 0.165);
+
 }
