--- a/src/styles.css
+++ b/src/styles.css
@@ -130,5 +130,15 @@ main .card {
 .card .text {
         position: absolute;
         z-index: 10;
+        bottom: 1px;
+}
 
+@media (max-width: 800px) {
+        header .nav {
+                display: flex;
+                justify-content: flex-end;
+        }
+        header img {
+                max-width: 150px;
+        }
 }
