--- a/src/styles.css
+++ b/src/styles.css
@@ -137,8 +137,29 @@ main .card {
         header .nav {
                 display: flex;
                 justify-content: flex-end;
+                align-items: center;
+        }
+        .nav a {
+                text-transform: uppercase;
+                margin-left: 20px;
         }
         header img {
                 max-width: 150px;
+        }
+
+        .banner, 
+        .banner .super {
+                height: 111px;
+                width: 340px;
+        }
+        .banner .super img {
+                height: 111px;
+        }
+        .banner p {
+                font-size: 24px;
+        }
+        main {
+                background-color: white;
+                padding: 0;
         }
 }
